--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Flask veikia</title></head>
+<head>
+<title>Flask veikia V2</title>
+</head>
 <body>
-    <h1>Sveiki! Flask aplikacija veikia!</h1>
+<h1>Sveiki! Flask aplikacija veikia V2!</h1>
 </body>
 </html>
